--- a/style.css
+++ b/style.css
@@ -48,18 +48,23 @@ header a:hover {
 
 body {
     background-color: white;
+    text-align: center;
+}
+
+.project-list {
+    display: inline-block;
 }
 
 .page-title {
     color: var(--blue);
-    text-align: center;
     margin: 1rem;
     font-size: 1.8rem;
 }
 
 .project-box{
-    margin: 5% 10% 5% 10%;
-    display:grid;
+    margin: 5% 0% 5% 0%;
+    width: 50rem;
+    display: grid;
     grid-template-columns: 30% 70%;
     border: var(--blue) solid 3px;
     border-radius: 1rem;
@@ -125,22 +130,53 @@ body {
 .contact-section {
     border: var(--blue) solid 3px;
     border-radius: 1rem;
-    margin: 5% 15% 5% 15%;
-    padding: 2rem;
+    margin: 0% 15% 5% 15%;
+    padding: 2rem 0rem 2rem 0rem;
+    color: var(--blue);
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-section h3 {
+    margin: 0.4rem;
+}
+
+.contact-section h2 {
+    margin: 1rem 0.4rem 1rem;
 }
 
 form input {
     display: block;
+    margin: 0.4rem 0.4rem 0.4rem 32%;
+    border: var(--blue) 1px solid;
+    border-radius: 1rem;
+    padding: 2px 2px 2px 4px;
 }
 
-form textarea {
+form #message {
     resize: none;
+    width: 30rem;
+    height: 8rem;
+    margin: 0.4rem;
+    border: var(--blue) 1px solid;
+    border-radius: 1rem;
+    padding: 8px;
 }
 
 form button {
     display: block;
     border: var(--blue) solid 3px;
     border-radius: 1rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
+    margin: 0.4rem 0.4rem 0.4rem 45%;
     cursor: pointer;
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+form button:hover {
+    border: var(--orange) solid 3px;
+    color: var(--orange);
 }
